scss/illinois-framework/_paragraphs.bb.scss
.paragraph--type--bb {
  @extend %paragraphs-padding;

  &.full-width {
    padding: 0 var(--il-content-margin);
  }
  &.fixed-width {
    padding-left: 50px !important;
  }

  .field--name-field-bb {
    &__title {
      padding: 0 15px;
      margin: 0 0 rem(35px);
      color: var(--il-orange);
    }

    &__subtitle {
      padding: 0 15px;
      margin: 0 0 rem(35px);
      font-weight: 600;
      font-size: rem(28px);
      line-height: rem(32px);
      color: var(--il-blue);
    }
  }

  .left {
    .paragraph--type--bb__wrapper {
      justify-content: left;
    }

    .field--name-field-bb {
      &__title {
        padding-left: 0;
        text-align: left;
      }

      &__subtitle {
        padding-left: 0;
        text-align: left;
      }
    }
  }

  .center {
    .paragraph--type--bb__wrapper {
      justify-content: center;
    }

    .field--name-field-bb {
      &__title {
        text-align: center;
      }

      &__subtitle {
        text-align: center;
      }
    }
  }

  &__wrapper {

    &.background--color {
      &--illiniblue {
        background-color: transparent !important;

        a.field--name-field-bb-content__link {
          background-color: var(--il-blue);
          color: white;

          &:hover,
          &:focus {
            background-color: white;
            color: #252525;

            h2 {
              color: var(--il-orange);
            }
          }
        }
      }

      &--white {
        background-color: transparent;

        a.field--name-field-bb-content__link {
          background-color: white;
          color: inherit;
          margin-bottom: rem(48px);

          &:hover,
          &:focus {
            background-color: var(--il-blue);
            color: white;

            h2 {
              color: white;
            }
          }
        }
      }
    }
  }

  a.field--name-field-bb-content__link {
    h2:after {
      content: '\f101';
      font-family: FontAwesome;
      vertical-align: bottom;
      padding: 0 0.5rem;
    }

    &:hover,
    &:focus {
      background-color: var(--il-blue);
      color: white;

      h2 {
        color: white;
      }
    }
  }

  .field--name-field-bb-content {

    &__link {
      color: inherit;
      display: flex;
      margin-bottom: rem(15px);
      text-decoration: none;
      width: 100%
    }

    &__image {

      &__wrapper {

      }
    }

    &__content {
      width: 100%;

      &__wrapper {
        border: 1px solid #707070;
        border-bottom: 3px solid var(--il-orange);
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        padding: 0 0 rem(30px) 0;
        width: 100%;
      }

      img {
        width: 100%;
      }
    }

    &__title {

      .field__item {
        color: inherit;
        font-family: var(--il-source-sans);
        font-size: rem(21px);
        font-weight: 700;
        line-height: rem(33px);
        opacity: 1;
        padding: rem(30px) rem(30px) 0 rem(30px);
      }
    }

    &__body {

      .field__item {
        font-size: rem(20px);
        line-height: rem(27px);
        opacity: 1;
        padding: 0 rem(30px) rem(30px) rem(30px);
      }
    }
  }

  .field--name-field-bb-content__content__wrapper {
    &:hover {
      border-bottom: 3px solid var(--il-industrial-blue-1);
    }
  }
}
.il-content {

  .paragraph--type--bb {

    &.fixed-width,
    &.full-width {
      padding: 0;
    }
  }
}

